# higher-order-aberration-visualizer

./: .gitignore  LICENSE  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  vite.config.ts
.codex/skills/dev-rules/: SKILL.md
.github/workflows/: ci-cd.yml  ci-docs-skip.yml  release.yml
docs/: architecture.md  development.md  simulation.md
e2e/: app.spec.ts
public/: sw.js
public/pyodide/: README.md  prysm-0.21.1-py2.py3-none-any.whl
scripts/: activate-venv.sh  build-jupiter-assets.py  build-pyodide-wheel.sh  init-prod-venv.sh  test-python.sh
skills/hoa-project-structure/: SKILL.md
skills/hoa-tech-stack/: SKILL.md
src/: App.test.tsx  App.tsx  i18n.ts  main.tsx  publicAssetUrls.test.ts  publicAssetUrls.ts  registerServiceWorker.test.ts  registerServiceWorker.ts  routing.test.ts  routing.ts  styles.css
src/components/: AberrationSlidersCard.tsx  AppHeader.tsx  CommitSlider.tsx  NumberField.test.tsx  NumberField.tsx  OpticalSystemConfigCard.tsx  SettingsDrawer.tsx  SimulatedImageCard.test.tsx  SimulatedImageCard.tsx  index.ts  simulationConfig.test.ts  simulationConfig.ts
src/hoa_visualizer_utils/: __init__.py  prysm_simulation.py
src/hooks/: useAppTheme.ts  useWorkerClient.test.tsx  useWorkerClient.ts
src/test/: releaseWorkflow.test.ts  vitePublicAssets.test.ts  workerMock.ts
src/types/: domain.ts  webmcp.d.ts
src/workers/: client.ts  optics.worker.test.ts  optics.worker.ts  registerServiceWorker.ts  types.ts
tests/python/: test_package.py  test_prysm_simulation.py
(+75 files in other folders)
