[build-system]
requires = ["setuptools==76.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hoa-visualizer-utils"
version = "0.1.0"
description = "Internal Python utilities for HOA Visualizer."
requires-python = ">=3.11"
dependencies = [
    "prysm==0.21.1",
    "scipy==1.14.1",
    "numpy==2.2.5",
    "matplotlib==3.10.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
