[build-system]
requires = ["setuptools==78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "higher-order-aberration-visualizer-utils"
version = "0.1.1"
description = "Internal Python utilities for HOA Visualizer."
requires-python = ">=3.11"
dependencies = [
    "prysm==0.21.1",
    "scipy==1.14.1",
    "numpy==2.2.5",
    "matplotlib==3.10.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hoa_visualizer_utils.simulation.assets" = ["*.npz"]

[tool.pytest.ini_options]
testpaths = ["src/hoa_visualizer_utils/tests/python"]
